fix: detail page horizontal scroll

--- a/src/modules/DesignDetail/ui/DesignsDetailSameProducts/DesignsDetailSameProducts.module.scss
+++ b/src/modules/DesignDetail/ui/DesignsDetailSameProducts/DesignsDetailSameProducts.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 64rem;
   padding: 164rem 64rem 0;
+  overflow: hidden;
 }
 
 .title{
